read,create api + database

--- a/.stack-work/install/122630ee/pkgdb/todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss.conf
+++ b/.stack-work/install/122630ee/pkgdb/todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss.conf
@@ -11,25 +11,25 @@ homepage:             https://github.com/githubuser/todo#readme
 description:
     Please see the README on GitHub at <https://github.com/githubuser/todo#readme>
 
-abi:                  5e5cf6edfa89baab163740a88a6a58d3
+abi:                  65d96f4e3bd9491550a0688086209627
 exposed:              True
-exposed-modules:      Lib Tes1
+exposed-modules:      Lib Tes1 Tes2
 hidden-modules:       Paths_todo
 import-dirs:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4\todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4\todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss
 
 library-dirs:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4\todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4\todo-0.1.0.0-2KEK19D0xwa9ftA7EZskss
     C:\Users\LENOVO\AppData\Local\Programs\stack\x86_64-windows\msys2-20220904\mingw64\lib
     C:\Users\LENOVO\AppData\Local\Programs\stack\x86_64-windows\msys2-20220904\mingw64\bin
 
 dynamic-library-dirs:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\lib\x86_64-windows-ghc-9.2.4
     C:\Users\LENOVO\AppData\Local\Programs\stack\x86_64-windows\msys2-20220904\mingw64\lib
     C:\Users\LENOVO\AppData\Local\Programs\stack\x86_64-windows\msys2-20220904\mingw64\bin
 
 data-dir:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\share\x86_64-windows-ghc-9.2.4\todo-0.1.0.0
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\share\x86_64-windows-ghc-9.2.4\todo-0.1.0.0
 
 hs-libraries:         HStodo-0.1.0.0-2KEK19D0xwa9ftA7EZskss
 include-dirs:
@@ -46,7 +46,7 @@ depends:
     wai-3.2.3-GJ93JXcVtKMJ4Od8PN5oi0 warp-3.3.21-6aLw5aLNTMq1SnO2LPnOPR
 
 haddock-interfaces:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\doc\todo-0.1.0.0\todo.haddock
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\doc\todo-0.1.0.0\todo.haddock
 
 haddock-html:
-    C:\Users\LENOVO\documents\funpro\todo\.stack-work\install\122630ee\doc\todo-0.1.0.0
+    C:\Users\LENOVO\Documents\FunPro\todo\.stack-work\install\122630ee\doc\todo-0.1.0.0
