--- a/todo.cabal
+++ b/todo.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Cors
       Lib
       Tes1
       Tes2
@@ -45,6 +46,7 @@ library
     , time
     , unliftio-core
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -68,6 +70,7 @@ executable todo-exe
     , todo
     , unliftio-core
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -95,5 +98,6 @@ test-suite todo-test
     , todo
     , unliftio-core
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
