fix docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,5 +8,13 @@ COPY CHANGELOG.md .
 RUN cabal build --dependencies-only
 COPY app ./app
 COPY src ./src
+copy test ./test
+copy README.md .
+copy LICENSE .
+# COPY package.yaml .
+# COPY stack.yaml .
+# COPY stack.yaml.lock .
+# copy test ./test
+# copy CHANGELOG.md .
 RUN cabal install exe:todo-exe
 ENTRYPOINT [ "todo-exe" ]
