--- a/backend/todo.cabal
+++ b/backend/todo.cabal
@@ -36,6 +36,7 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , http-types
     , monad-logger
     , mtl
     , persistent
@@ -58,6 +59,7 @@ executable todo-exe
   build-depends:
       aeson
     , base
+    , http-types
     , monad-logger
     , mtl
     , persistent
@@ -85,6 +87,7 @@ test-suite todo-test
     , hspec
     , hspec-wai
     , hspec-wai-json
+    , http-types
     , monad-logger
     , mtl
     , persistent
