--- a/backend2/backend2.cabal
+++ b/backend2/backend2.cabal
@@ -34,10 +34,14 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , http-types
     , postgresql-simple
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , warp
   default-language: Haskell2010
 
 executable backend2-exe
@@ -51,10 +55,14 @@ executable backend2-exe
       aeson
     , backend2
     , base >=4.7 && <5
+    , http-types
     , postgresql-simple
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , warp
   default-language: Haskell2010
 
 test-suite backend2-test
@@ -69,8 +77,12 @@ test-suite backend2-test
       aeson
     , backend2
     , base >=4.7 && <5
+    , http-types
     , postgresql-simple
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , warp
   default-language: Haskell2010
