--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,7 +9,8 @@ WORKDIR /app
 COPY . .
 # ==== BUILD =====
 # Install dependencies (npm ci makes sure the exact versions in the lockfile gets installed)
-RUN npm ci 
+RUN npm install
+#RUN npm ci 
 # Build the app
 RUN npm run build
 # ==== RUN =======
