--- a/backend/todo.cabal
+++ b/backend/todo.cabal
@@ -26,11 +26,11 @@ source-repository head
 library
   exposed-modules:
       Database
+      Database2
+      MainServer
       Model
       Model2
       Server
-      Tes1
-      Tes2
   other-modules:
       Paths_todo
   hs-source-dirs:
