--- a/backend2/backend2.cabal
+++ b/backend2/backend2.cabal
@@ -25,7 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      User
   other-modules:
       Paths_backend2
   hs-source-dirs:
@@ -38,6 +38,9 @@ library
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , http-types
   default-language: Haskell2010
 
 executable backend2-exe
@@ -55,6 +58,9 @@ executable backend2-exe
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , http-types
   default-language: Haskell2010
 
 test-suite backend2-test
@@ -73,4 +79,7 @@ test-suite backend2-test
     , scotty
     , text
     , time
+    , wai
+    , wai-cors
+    , http-types
   default-language: Haskell2010
