--- a/backend2/backend2.cabal
+++ b/backend2/backend2.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Lib2
   other-modules:
       Paths_backend2
   hs-source-dirs:
